[package]
name = "mc-facade"
version = "0.1.0"
authors = ["Simon Tomlinson <simonbtomlinson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.1", features = ["full"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.3.4"
bytes = "0.5.6"
