[package]
name = "mc-facade"
version = "0.1.0"
authors = ["Simon Tomlinson <simonbtomlinson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.1", features = ["full"] }
bytes = "0.5.6"
log = "0.4.11"
env_logger = "0.7.1"
