[package]
name = "mc-facade"
version = "0.1.0"
authors = ["Simon Tomlinson <simonbtomlinson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["full"] }
futures = "0.3"
bytes = "0.5.6"
log = "0.4.11"
env_logger = "0.7.1"
pin-project-lite = "0.1"

[build-dependencies]
bindgen = "0.55.1"